--- a/data.html
+++ b/data.html
@@ -150,6 +150,12 @@
 						</div>
 					</div>
 
+
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
+
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/smartvis.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
@@ -208,6 +214,10 @@
 						</div>
 					</div>
 
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/mengxiang.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
@@ -222,22 +232,22 @@
 					</div>
 
 					<!--<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/00.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							<div class="desc">
-								<h3><a href="#">校服</a></h3>
-								<span><small>数据新闻 </small> / <small> 图像分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
-								<p>为了搞清楚网络上频繁出现的“直男癌”到底是什么，从七个社交平台暴力爬取了有关“直男癌”逾300万字的文本数据，负责策划选题、数据爬取、文本分析、视觉、撰文，阅读量30W+</p>
-								<a href="https://zhuanlan.zhihu.com/p/28923834" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="https://zhuanlan.zhihu.com/p/28923834" target="_blank">链接1</a>
-							</div>
-						</div>
-					</div>-->
+			<div class="blog-entry">
+				<a href="#" class="blog-img"><img src="images/00.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+				<div class="desc">
+					<h3><a href="#">校服</a></h3>
+					<span><small>数据新闻 </small> / <small> 图像分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+					<p>为了搞清楚网络上频繁出现的“直男癌”到底是什么，从七个社交平台暴力爬取了有关“直男癌”逾300万字的文本数据，负责策划选题、数据爬取、文本分析、视觉、撰文，阅读量30W+</p>
+					<a href="https://zhuanlan.zhihu.com/p/28923834" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+					<a href="https://zhuanlan.zhihu.com/p/28923834" target="_blank">链接1</a>
+				</div>
+			</div>
+		</div>-->
 
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/dizhen.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/dizhen.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">四川地震时序图</a></h3>
 								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2017</small></span>
@@ -252,7 +262,7 @@
 							<div class="desc">
 								<h3><a href="#">恐怖主义3.0</a></h3>
 								<span><small>信息图 </small> / <small> AI/PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<p>参加第三届数据新闻大赛的作品</p>
 								<a href="detail/kongbu-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="detail/kongbu-detail.jpg" target="_blank">Infographic</a>
 							</div>
@@ -270,16 +280,22 @@
 						</div>
 					</div>
 
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/kongqi.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/wumai2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">空气质量监测变化图</a></h3>
-								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<h3><a href="#">雾霾</a></h3>
+								<span><small>词云 </small> / <small> 词云工具 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
+
+
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -305,6 +321,21 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/acm.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">ACM数学建模比赛</a></h3>
+								<span><small>统计图 </small> / <small> Excel </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/tingche1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">停车配建分析</a></h3>
@@ -313,6 +344,8 @@
 							</div>
 						</div>
 					</div>
+
+
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -347,12 +380,41 @@
 						</div>
 					</div>
 
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/kongqi.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">空气质量监测变化图</a></h3>
+								<span><small>地图 </small> / <small> Arcgis </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/wumai.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">雾霾数据实时监测可视化</a></h3>
 								<span><small>可视化 </small> / <small> Python</small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/zaiwuda.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">在武大</a></h3>
+								<span><small>信息图 </small> / <small> PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -368,6 +430,10 @@
 							</div>
 						</div>
 					</div>
+
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -397,6 +463,32 @@
 							<div class="desc">
 								<h3><a href="#">亚洲地区人口分级图</a></h3>
 								<span><small>地图 </small> / <small> Arcgis</small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/qiqi.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">聊天记录...的记录方式（一）</a></h3>
+								<span><small>统计图 </small> / <small> PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<!--新起的第二排，不知道为什么这样才能不乱排版-->
+				<div class="row row-bottom-padded-md">
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/tuandui.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">聊天记录...的记录方式（二）</a></h3>
+								<span><small>简单地排列了一下群文件 </small> / <small> PS </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -443,6 +535,7 @@
 	</div>
 
 	<!-- jQuery -->
+	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
