--- a/photo.html
+++ b/photo.html
@@ -230,7 +230,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-						<p class="fh5co-lead">但我发现更多值得付诸精力的事物...</p>
+						<p class="fh5co-lead">但我也发现更多值得付诸精力的事物...</p>
 						<p><a href="#" class="btn btn-primary"> More Photo</a></p>
 					</div>
 					
