--- a/study.html
+++ b/study.html
@@ -89,8 +89,8 @@
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">学术科研与创新 Academic research and innovation</h2>
-				<div class="row row-bottom-padded-md">
 
+				<div class="row row-bottom-padded-md">
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -111,7 +111,7 @@
 							<div class="desc">
 								<h3><a href="#">织物传感器用于人体运动监测的综述性论文工作</a></h3>
 								<span><small>Paper </small> / <small> Review </small> / <small> <i class="icon-comment"></i> 2021-2022</small></span>
-								<p>全面分析基于智能纺织品的人体运动监测可穿戴系统，从材料、传感机理、运动算法、传感布设、原型、反馈、用户等多维度剖析领域相关成果的综述性研究</p>
+								<p>全面分析基于智能织物的人体运动监测可穿戴系统，从材料、传感、运动算法、传感布设、原型、反馈、用户等多维度剖析相关成果的综述性研究</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -124,7 +124,7 @@
 							<div class="desc">
 								<h3><a href="#">面向运动捕捉的互电容刺绣交互界面研究</a></h3>
 								<span><small>织物交互界面 </small> / <small> Cypress </small> / <small> <i class="icon-comment"></i> 2021</small></span>
-								<p>基于互电容刺绣技术，研制出可多点交互的织物界面原型，约形成了20余例织物交互界面，连接电脑进行触控</p>
+								<p>基于互电容刺绣技术，研制出可多点交互的织物界面原型，通过刺绣约形成了20余例织物交互界面。使用Cypress进行单片机连接，反馈触控数据</p>
 								<a href="images/detail/capacitance-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="images/detail/capacitance-detail.jpg" target="_blank">Poster</a>
 							</div>
@@ -138,12 +138,17 @@
 							<div class="desc">
 								<h3><a href="#">上肢康复织物传感网设计方法与评估</a></h3>
 								<span><small>项目申报 </small> / <small> 特征选择优化 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
-								<p>面向上肢康复运动捕捉的织物传感器布设方案的智能生成，以支持脑卒中患者的有效的康复训练，研究拉伸应变织物传感单元特性和高精度织物传感网布设方案优化生成算法</p>
+								<p>为支持脑卒中患者的有效的康复训练，研究拉伸应变织物传感单元特性和高精度织物传感网布设方案优化生成算法，智能生成织物传感网</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
 
+
+
+				</div>
+
+				<div class="row row-bottom-padded-md">
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -165,7 +170,7 @@
 							<div class="desc">
 								<h3><a href="#">数字感知时代的嗅觉在中国的发展概述</a></h3>
 								<span><small>课程论文 </small> / <small> 数字嗅觉 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
-								<p>综述了目前国内对数字嗅觉的研究概况，从理论研究、技术手段、行业应用、商业产品等角度进行调研和分析。</p>
+								<p>综述了目前国内数字嗅觉领域的研究概况，从理论研究、技术手段、行业应用、商业产品等多角度进行调研和分析</p>
 								<a href="doc/smell.pdf" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="doc/smell.pdf" target="_blank">PDF</a>
 							</div>
@@ -178,7 +183,7 @@
 							<div class="desc">
 								<h3><a href="#">虚拟车朋友：车与你的情感依赖</a></h3>
 								<span><small>创新创业课 </small> / <small> 汽车场景创新 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
-								<p>打造一个(基于AR的)车虚拟朋友，让车内外时空与车形成日常、反复的行为交互，让人与车形成依赖，这种与车之间的依赖，带来个人归属感，带来情感牵引。</p>
+								<p>打造一个基于AR的虚拟车友，让车内外时空与车形成日常、反复的行为交互，让人与车形成依赖，依赖能够带来个人归属感和情感牵引</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -202,7 +207,7 @@
 							<div class="desc">
 								<h3><a href="#">邻里百事互助社区应用</a></h3>
 								<span><small>交互设计课 </small> / <small> 交互原型 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
-								<p>从激活社区本身资源的角度出发,构建一个资源互联的社区,帮助实现实现社区内、社区与社区之间的信息共享,最终能够构成社区资源互助生态圈</p>
+								<p>从激活社区本身资源的角度出发,构建一个资源互联的社区,帮助实现社区内、社区间的信息共享,最终能够构成社区资源互助生态圈</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -221,7 +226,7 @@
 							<div class="desc">
 								<h3><a href="#">无法挽回的呼吸-为死亡而设计</a></h3>
 								<span><small>媒体传达课 </small> / <small> 概念交互 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
-								<p>用弱交互式呼吸聆听的H5形式，表达与体验肺炎患者最后的moment，用近乎暴力的方式灌入听者的耳朵，结合交互操作激起观者的无力、绝望、压抑</p>
+								<p>用弱交互式呼吸聆听的H5形式，表达与体验肺炎患者最后的moment，用近乎暴力的方式灌入听者耳朵，结合交互激起观者的无力、绝望、压抑</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -234,7 +239,7 @@
 							<div class="desc">
 								<h3><a href="#">实习资源服务平台——菜鸟实习</a></h3>
 								<span><small>产品服务体系课 </small> / <small> 用户分析 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
-								<p>针对非全日制学生并无固定导师，难以接触到丰富的校内实习资源问题而产出的服务体系设计。</p>
+								<p>针对非全日制学生并无固定导师，难以接触到丰富的校内实习资源问题而产出的服务体系设计</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -247,7 +252,7 @@
 							<div class="desc">
 								<h3><a href="#">『那些人，那些事』时代变迁互动展馆设计</a></h3>
 								<span><small>交互设计课 </small> / <small> 互动展馆 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
-								<p>根据历史和影视文艺作品为参考，虚构出四个时代不同角色，让参观者分别体验多人物在不同时代的生活片段，“具象、写实、体验”时代的缩影</p>
+								<p>根据历史和影视文艺作品为参考，虚构出四个时代不同角色，让参观者分别在不同的展馆体验多人物在不同时代的生活片段</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -285,7 +290,7 @@
 							<div class="desc">
 								<h3><a href="#">全景布设点：LOCATION DISTRIBUTION OPTIMIZATION OF PHOTOGRAPHING SITES FOR INDOOR PANORAMA MODELING</a></h3>
 								<span><small>Paper </small> / <small> 室内导航 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
-								<p>提出一种标准程序，用于生成室内全景建模中全景站点的具体位置和总数，建立全景场地与其目标之间的功能关系，将关系应用于全景站点网络使用距离清晰度函数（FC和Fe）表示全景图和目标距离或障碍物距离之间的数学关系</p>
+								<p>提出一种标准程序，用于生成室内全景建模中全景站点的具体位置和总数，。使用距离清晰度函数（FC和Fe）表示全景图和目标距离或障碍物距离之间的数学关系</p>
 								<a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/IV-2-W4/431/2017/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/IV-2-W4/431/2017/" target="_blank">链接</a>
 							</div>
@@ -299,7 +304,7 @@
 							<div class="desc">
 								<h3><a href="#">CNN影像分类：APPLICATION OF CONVOLUTIONAL NEURAL NETWORK IN CLASSIFICATION OF HIGH RESOLUTION AGRICULTURAL REMOTE SENSING IMAGES</a></h3>
 								<span><small>Paper </small> / <small> CNN/Matlab </small> / <small> <i class="icon-comment"></i> 2017</small></span>
-								<p>提出一种基于卷积神经网络（CNN）的高分辨率农业遥感影像分类方法，通过在MATLAB深度学习工具箱下的CNN上进行训练和测试，经过训练中调整参数的逐步优化，作物分类最终得到了99.66%的正确率。</p>
+								<p>提出一种基于卷积神经网络（CNN）的高分辨率农业遥感影像分类方法，通过在MATLAB深度学习工具箱下的CNN上进行训练和测试，作物分类最终得到了99.66%的正确率</p>
 								<a href="https://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XLII-2-W7/989/2017/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XLII-2-W7/989/2017/" target="_blank">链接</a>
 							</div>
@@ -309,7 +314,7 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/more1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">更多待书写..</a></h3>
 								<span><small>Any </small> / <small> Creative </small> / <small> <i class="icon-comment"></i> 201X</small></span>
