--- a/other.html
+++ b/other.html
@@ -94,7 +94,7 @@
 							<a href="#" class="blog-img"><img src="images/gewen.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">格纹宝：全自动格纹生成机</a></h3>
-								<span><small>工具 </small> / <small> Web </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<span><small>工具 </small> / <small> JavaScript </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>格纹宝，JK格裙、格纹爱好者的天堂！</p>
 								<a href="https://moonmooncha.github.io/Lattice-Generator/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://moonmooncha.github.io/Lattice-Generator/" class="lead">点击使用 <i class="icon-arrow-right3"></i></a>
@@ -146,13 +146,14 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-6.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/shengdan.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">下雪的圣诞树</a></h3>
+								<span><small>CPP </small> / <small> C++ </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								<p>似乎是写给班上同学的祝福小程序，大概是刚刚学了一点C++？</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
