--- a/study.html
+++ b/study.html
@@ -97,7 +97,7 @@
 							<a href="#" class="blog-img"><img src="images/bishe.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">织物用于人体运动捕捉中的布局生成研究</a></h3>
-								<span><small>毕设 </small> / <small> Matlab/交互原型 </small> / <small> <i class="icon-comment"></i>2022</small></span>
+								<span><small>毕设 </small> / <small> Matlab/Axure </small> / <small> <i class="icon-comment"></i>2022</small></span>
 								<p>着眼于智能织物用于人体运动捕捉时的传感器布设问题，旨在剖析织物传感器的设计参数与标准，利用算法生成一定条件下更优的布设方案</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
@@ -206,7 +206,7 @@
 							<a href="#" class="blog-img"><img src="images/linli.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">邻里百事互助社区应用</a></h3>
-								<span><small>交互设计课 </small> / <small> 交互原型 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<span><small>交互设计课 </small> / <small> Axure </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>从激活社区本身资源的角度出发,构建一个资源互联的社区,帮助实现社区内、社区间的信息共享,最终能够构成社区资源互助生态圈</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
