--- a/other.html
+++ b/other.html
@@ -97,11 +97,12 @@
 								<span><small>工具 </small> / <small> JavaScript </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>格纹宝，JK格裙、格纹爱好者的天堂！</p>
 								<a href="https://moonmooncha.github.io/Lattice-Generator/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="https://moonmooncha.github.io/Lattice-Generator/" class="lead">点击使用 <i class="icon-arrow-right3"></i></a>
+								<a href="https://moonmooncha.github.io/Lattice-Generator/" target="_blank">点击使用</a>
 							</div>
 						</div>
 					</div>
-					
+
+
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -111,6 +112,22 @@
 								<span><small>CPP </small> / <small> C++ </small> / <small> <i class="icon-comment"></i> 2015</small></span>
 								<p>似乎是写给班上同学的祝福小程序，大概是刚刚学了一点C++？</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<div class="col-md-12  slider-text">
+								<iframe width=100% src='https://player.youku.com/embed/XOTU4NDkwMDI4' frameborder=0 'allowfullscreen'></iframe>
+							</div>
+
+							<div class="desc">
+								<h3><a href="#">沉沦</a></h3>
+								<span><small>微电影 </small> / <small> 倾情未出演</small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								<p>1408微电影（放一个微电影在这，2025年再来看)</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://www.youku.com/profile/index/?spm=a2hbt.13141534.1_1.1&uid=UMTYwNTQ3NTg2NA==" target="_blank">更多大学期间的视频</a>
 							</div>
 						</div>
 					</div>
