--- a/about.html
+++ b/about.html
@@ -38,8 +38,9 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<!-- Place 
+		and apple-touch-icon.png in the root directory -->
+	<link rel="shortcut icon" href="icon/cat.png">
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 	
