--- a/notes.html
+++ b/notes.html
@@ -38,8 +38,8 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<!-- Place icon/cat.png and apple-touch-icon.png in the root directory -->
+	<link rel="shortcut icon" href="icon/cat.png">
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 	
@@ -124,6 +124,7 @@
 							</div>
 						</div>
 					</div>
+
 
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
