--- a/other.html
+++ b/other.html
@@ -38,8 +38,8 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<!-- Place icon/cat.png and apple-touch-icon.png in the root directory -->
+	<link rel="shortcut icon" href="icon/cat.png">
 
 	
 	<!-- Animate.css -->
@@ -186,6 +186,19 @@
 							<a href="#" class="blog-img"><img src="images/haibao7.jpg" class="img-responsive"></a>
 							<div class="desc">
 								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">一个人走到地老天荒的街</a></h3>
+								<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
+								<p>留档，初高中写的青春伤痛小说，为了避免你我相处时的尴尬，我的建议是不要看</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="article.html">阅读</a>
 							</div>
 						</div>
 					</div>
