--- a/article.html
+++ b/article.html
@@ -65,100 +65,62 @@
 
 					   </head>
 					   <body>
-						   <div id="fh5co-page">
-						   	<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-						   	<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
+					   	<div id="fh5co-page">
+					   		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+					   		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
-						   		<h1 id="fh5co-logo"><a href="index.html">张月瑶</a></h1>
-						   		<nav id="fh5co-main-menu" role="navigation">
-						   			<ul>
-						   				<li><a href="index.html">我</a></li>
-						   				<li><a href="study.html">学术项目</a></li>
-						   				<li><a href="data.html">数据项目</a></li>
-						   				<li><a href="up.html">UP主</a></li>
-						   				<li><a href="photo.html">摄影</a></li>
-						   				<li><a href="other.html">其他</a></li>
-						   				<li><a href="notes.html">随笔</a></li>
-						   			</ul>
-						   		</nav>
+					   			<h1 id="fh5co-logo"><a href="index.html">张月瑶</a></h1>
+					   			<nav id="fh5co-main-menu" role="navigation">
+					   				<ul>
+					   					<li><a href="index.html">我</a></li>
+					   					<li><a href="study.html">学术项目</a></li>
+					   					<li><a href="data.html">数据项目</a></li>
+					   					<li><a href="up.html">UP主</a></li>
+					   					<li><a href="photo.html">摄影</a></li>
+					   					<li><a href="other.html">其他</a></li>
+					   					<li><a href="notes.html">随笔</a></li>
+					   				</ul>
+					   			</nav>
 
-						   		<div class="fh5co-footer">
-						   			<p><small>&copy; 2022年.个人网站尚在建设中. All Rights Reserved.</span> <span>Frame Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> </small></p>
-						   		</div>
+					   			<div class="fh5co-footer">
+					   				<p><small>&copy; 2022年.个人网站尚在建设中. All Rights Reserved.</span> <span>Frame Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> </small></p>
+					   			</div>
 
-						   	</aside>
-
-
-
-
-	
+					   		</aside>
 
 
 
+					   		<div id="fh5co-main">
+					   			<div class="fh5co-narrow-content">
+					   				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">文章详情</h2>
+					   				<div class="row row-bottom-padded-md">
+					   					<article class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12 col-xs-offset-0">
+					   						<figure class="animate-box">
+					   							<img src="images/img_bg_3.jpg" alt="Image" class="img-responsive">
+					   						</figure>
+					   						<h2 class="fh5co-article-title animate-box">这篇文章的标题（但是没写读取标题功能）</a></h2>
+					   						<span class="fh5co-meta fh5co-date animate-box">这篇文章的日期（但是没写读取日期功能）</span>
+
+					   						<span class="fh5co-meta fh5co-date animate-box"></br>可是为什么要在本地管理数据啊？想念Wordpress了</span>
 
 
-						   	<div id="fh5co-main">
-						   		<div class="fh5co-narrow-content">
-						   			<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">文章详情</h2>
-						   			<div class="row row-bottom-padded-md">
-											<article class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12 col-xs-offset-0">
-												<figure class="animate-box">
-													<img src="images/img_bg_3.jpg" alt="Image" class="img-responsive">
-												</figure>
-												<h2 class="fh5co-article-title animate-box">My First Time Traveling in Vietnam</a></h2>
-												<span class="fh5co-meta fh5co-date animate-box">March 6th, 2016</span>
-
-
-
-												<pre id="text"></pre>
-												<script type="text/javascript">
-													$.ajax({
-                                                        url: "doc/onepeople.txt",
-														type: "get",
-														dataType: "text",
-														success: function (data) {
-															$("#text").text(data);
-														},
-														error: function (jqXHR, status, thrown) {
-															;
-														}
-													});
-												</script>
+					   						<pre id="text"></pre>
 
 
 
-												<div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-left content-article">
-													<div class="row">
-														<div class="col-lg-8 cp-r animate-box">
-															<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large <a href="#">language</a> ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
-															<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. </p>
-
-															<p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-														</div>
-														<div class="col-lg-4 animate-box">
-															<div class="fh5co-highlight right">
-																<h4>Highlight</h4>
-																<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
-															</div>
-														</div>
-													</div>
-
-
-												</div>
-
-											</article>
+					   					</article>
 
 
 
 
 
-						   			</div>
-						   		</div>
+					   				</div>
+					   			</div>
 
 
-						   	</div>
-						   </div>
+					   		</div>
+					   	</div>
 
 					   	<!-- jQuery -->
 					   	<script src="js/jquery.min.js"></script>
@@ -171,9 +133,37 @@
 					   	<!-- Flexslider -->
 					   	<script src="js/jquery.flexslider-min.js"></script>
 
-
 					   	<!-- MAIN JS -->
 					   	<script src="js/main.js"></script>
+
+
+					   	<script>
+				$(function () {
+					getData1();
+				});
+				function getData1() {
+					var name = $.query.get("name");
+					$("#name").text(name);
+				}
+					   	</script>
+
+					   	<script type="text/javascript">
+				$.ajax({
+                    url: name,
+					type: "get",
+					dataType: "text",
+					success: function (data) {
+						$("#text").text(data);
+					},
+					error: function (jqXHR, status, thrown) {
+						;
+					}
+				});
+					   	</script>
+
+
+
+
 
 					   </body>
 </html>
