--- a/other.html
+++ b/other.html
@@ -61,172 +61,229 @@
 
 	</head>
 	<body>
-	<div id="fh5co-page">
-		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
+		<div id="fh5co-page">
+			<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+			<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
-			<h1 id="fh5co-logo"><a href="index.html">张月瑶</a></h1>
-			<nav id="fh5co-main-menu" role="navigation">
-				<ul>
-					<li><a href="index.html">我</a></li>
-					<li><a href="study.html">学术项目</a></li>
-					<li><a href="data.html">数据项目</a></li>
-					<li><a href="up.html">UP主</a></li>
-					<li><a href="photo.html">摄影</a></li>
-					<li><a href="other.html">其他</a></li>
-					<li><a href="notes.html">随笔</a></li>
-				</ul>
-			</nav>
+				<h1 id="fh5co-logo"><a href="index.html">张月瑶</a></h1>
+				<nav id="fh5co-main-menu" role="navigation">
+					<ul>
+						<li><a href="index.html">我</a></li>
+						<li><a href="study.html">学术项目</a></li>
+						<li><a href="data.html">数据项目</a></li>
+						<li><a href="up.html">UP主</a></li>
+						<li><a href="photo.html">摄影</a></li>
+						<li><a href="other.html">其他</a></li>
+						<li><a href="notes.html">随笔</a></li>
+					</ul>
+				</nav>
 
-			<div class="fh5co-footer">
-				<p><small>&copy; 2022年.个人网站尚在建设中. All Rights Reserved.</span> <span>Frame Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> </small></p>
-			</div>
-
-		</aside>
-
-		<div id="fh5co-main">
-			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">其他，海报/小工具/胡乱手绘/游戏</h2>
-				<div class="row row-bottom-padded-md">
-
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/gewen.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							<div class="desc">
-								<h3><a href="#">格纹宝：全自动格纹生成机</a></h3>
-								<span><small>工具 </small> / <small> JavaScript </small> / <small> <i class="icon-comment"></i> 2020</small></span>
-								<p>格纹宝，JK格裙、格纹爱好者的天堂！</p>
-								<a href="https://moonmooncha.github.io/Lattice-Generator/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="https://moonmooncha.github.io/Lattice-Generator/" target="_blank">点击使用</a>
-							</div>
-						</div>
-					</div>
-
-
-
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/shengdan.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							<div class="desc">
-								<h3><a href="#">下雪的圣诞树</a></h3>
-								<span><small>CPP </small> / <small> C++ </small> / <small> <i class="icon-comment"></i> 2015</small></span>
-								<p>似乎是写给班上同学的祝福小程序，大概是刚刚学了一点C++？</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<div class="col-md-12  slider-text">
-								<iframe width=100% src='https://player.youku.com/embed/XOTU4NDkwMDI4' frameborder=0 'allowfullscreen'></iframe>
-							</div>
-
-							<div class="desc">
-								<h3><a href="#">沉沦</a></h3>
-								<span><small>微电影 </small> / <small> 倾情未出演</small> / <small> <i class="icon-comment"></i> 2015</small></span>
-								<p>1408微电影（放一个微电影在这，2025年再来看)</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="https://www.youku.com/profile/index/?spm=a2hbt.13141534.1_1.1&uid=UMTYwNTQ3NTg2NA==" target="_blank">更多大学期间的视频</a>
-							</div>
-						</div>
-					</div>
-
-
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/haibao1.jpg" class="img-responsive"></a>
-							<div class="desc">
-								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/haibao2.jpg" class="img-responsive"></a>
-							<div class="desc">
-								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/haibao3.jpg" class="img-responsive"></a>
-							<div class="desc">
-								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/haibao4.jpg" class="img-responsive"></a>
-							<div class="desc">
-								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/haibao5.jpg" class="img-responsive"></a>
-							<div class="desc">
-								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/haibao6.jpg" class="img-responsive"></a>
-							<div class="desc">
-								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/haibao7.jpg" class="img-responsive"></a>
-							<div class="desc">
-								<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							<div class="desc">
-								<h3><a href="#">一个人走到地老天荒的街</a></h3>
-								<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
-								<p>留档，初高中写的青春伤痛小说，为了避免你我相处时的尴尬，我的建议是不要看</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="article.html">阅读</a>
-							</div>
-						</div>
-					</div>
-
-
-
-
+				<div class="fh5co-footer">
+					<p><small>&copy; 2022年.个人网站尚在建设中. All Rights Reserved.</span> <span>Frame Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> </small></p>
 				</div>
+
+			</aside>
+
+			<div id="fh5co-main">
+				<div class="fh5co-narrow-content">
+					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">其他，海报/小工具/胡乱手绘/游戏</h2>
+					<div class="row row-bottom-padded-md">
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/gewen.gif" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">格纹宝：全自动格纹生成机</a></h3>
+									<span><small>工具 </small> / <small> JavaScript </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+									<p>格纹宝，JK格裙、格纹爱好者的天堂！</p>
+									<a href="https://moonmooncha.github.io/Lattice-Generator/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+									<a href="https://moonmooncha.github.io/Lattice-Generator/" target="_blank">点击使用</a>
+								</div>
+							</div>
+						</div>
+
+
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/shengdan.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">下雪的圣诞树</a></h3>
+									<span><small>CPP </small> / <small> C++ </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+									<p>似乎是写给班上同学的祝福小程序，大概是刚刚学了一点C++？</p>
+									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<div class="col-md-12  slider-text">
+									<iframe width=100% src='https://player.youku.com/embed/XOTU4NDkwMDI4' frameborder=0 'allowfullscreen'></iframe>
+								</div>
+
+								<div class="desc">
+									<h3><a href="#">沉沦</a></h3>
+									<span><small>微电影 </small> / <small> 倾情未出演</small> / <small> <i class="icon-comment"></i> 2015</small></span>
+									<p>1408微电影（放一个微电影在这，2025年再来看)</p>
+									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+									<a href="https://www.youku.com/profile/index/?spm=a2hbt.13141534.1_1.1&uid=UMTYwNTQ3NTg2NA==" target="_blank">更多大学期间的视频</a>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/haibao1.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/haibao2.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/haibao3.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/haibao4.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/haibao5.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/haibao6.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/haibao7.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">一个人走到地老天荒的街</a></h3>
+									<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
+									<p>留档，初高中写的青春伤痛小说，为了避免你我相处时的尴尬，我的建议是不要看</p>
+									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+									<a href="article.html">阅读</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">清晨</a></h3>
+									<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
+									<p>留档，初高中写的青春伤痛小说，为了避免你我相处时的尴尬，我的建议是不要看</p>
+									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+									<a href="article.html">阅读</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">一分钟蔓延</a></h3>
+									<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
+									<p>留档，初高中写的青春伤痛小说，为了避免你我相处时的尴尬，我的建议是不要看</p>
+									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+									<a href="article.html">阅读</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#" id="txtname">凉木</a></h3>
+									<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
+									<p>留档，初高中写的青春伤痛小说，为了避免你我相处时的尴尬，我的建议是不要看</p>
+									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+
+									<a href="article.html" id="btn">阅读</a>
+								</div>
+							</div>
+						</div>
+
+
+
+
+					</div>
+				</div>
+
+
 			</div>
-		
-
 		</div>
-	</div>
 
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Flexslider -->
-	<script src="js/jquery.flexslider-min.js"></script>
-	
-	
-	<!-- MAIN JS -->
-	<script src="js/main.js"></script>
+		<!-- jQuery -->
+		<script src="js/jquery.min.js"></script>
+		<!-- jQuery Easing -->
+		<script src="js/jquery.easing.1.3.js"></script>
+		<!-- Bootstrap -->
+		<script src="js/bootstrap.min.js"></script>
+		<!-- Waypoints -->
+		<script src="js/jquery.waypoints.min.js"></script>
+		<!-- Flexslider -->
+		<script src="js/jquery.flexslider-min.js"></script>
+
+
+		<!-- MAIN JS -->
+		<script src="js/main.js"></script>
+
+
+
+		<script>
+			$(function () {
+                name = $("#txtname").text();
+				$("#btn").on("click", function () {
+					jump1();
+				});
+			});
+			function jump1() {
+				url = "doc/" + name +".txt";//此处拼接内容
+				window.location.href = url;
+			}
+		</script>
+
+
 
 	</body>
 </html>
