--- a/up.html
+++ b/up.html
@@ -103,6 +103,17 @@
 
 
 
+				<div class="blog-entry">
+					<div class="col-md-8 col-md-offset-1  slider-text">
+						<video controls autoplay loop muted>
+							<source src="video/blankme.mp4" type="video/mp4">
+						</video>
+					</div>
+
+				</div>
+
+
+
 				<div class="col-md-8 col-md-offset-2  text-center col-sm-offset-1 js-fullheight slider-text">
 
 					<div class="col-md-8 col-md-offset-2   text-center  slider-text">
