--- a/other.html
+++ b/other.html
@@ -132,6 +132,64 @@
 							</div>
 						</div>
 
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/shuicai1.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>绘画 </small> / <small> 水彩 </small> / <small> <i class="icon-comment"></i> 2019</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/shuicai2.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>绘画 </small> / <small> 水彩 </small> / <small> <i class="icon-comment"></i> 2019</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/suxie1.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>速写 </small> / <small> 公选课 </small> / <small> <i class="icon-comment"></i> 2019</small></span>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/suxie2.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>速写 </small> / <small> 公选课 </small> / <small> <i class="icon-comment"></i> 2019</small></span>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/suxie3.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>速写 </small> / <small> 公选课 </small> / <small> <i class="icon-comment"></i> 2019</small></span>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/sumiao1.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>素描 </small> / <small> 公选课 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								</div>
+							</div>
+						</div>
+
+
 
 						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
@@ -192,46 +250,46 @@
 
 						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<a href="#" class="blog-img"><img src="images/img_bg_2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 								<div class="desc">
-									<h3><a href="#">一个人走到地老天荒的街</a></h3>
+									<h3><a href="#" id="txtname">一个人走到地老天荒的街</a></h3>
 									<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
 									<p>留档，初高中写的青春伤痛小说，为了避免你我相处时的尴尬，我的建议是不要看</p>
 									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-									<a href="article.html">阅读</a>
+									<a href="article.html" id="btn">阅读</a>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<a href="#" class="blog-img"><img src="images/img_bg_2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 								<div class="desc">
-									<h3><a href="#">清晨</a></h3>
+									<h3><a href="#" id="txtname">清晨</a></h3>
 									<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
 									<p>留档，初高中写的青春伤痛小说，为了避免你我相处时的尴尬，我的建议是不要看</p>
 									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-									<a href="article.html">阅读</a>
+									<a href="article.html" id="btn">阅读</a>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<a href="#" class="blog-img"><img src="images/img_bg_2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 								<div class="desc">
-									<h3><a href="#">一分钟蔓延</a></h3>
+									<h3><a href="#" id="txtname">一分钟蔓延</a></h3>
 									<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
 									<p>留档，初高中写的青春伤痛小说，为了避免你我相处时的尴尬，我的建议是不要看</p>
 									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-									<a href="article.html">阅读</a>
+									<a href="article.html" id="btn">阅读</a>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<a href="#" class="blog-img"><img src="images/img_bg_2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 								<div class="desc">
 									<h3><a href="#" id="txtname">凉木</a></h3>
 									<span><small>小说 </small> / <small> 初中 </small> / <small> <i class="icon-comment"></i> 200X</small></span>
