--- a/article.html
+++ b/article.html
@@ -149,7 +149,7 @@
 
 					   	<script type="text/javascript">
 				$.ajax({
-                    url: name,
+                    url: "doc/" + name + ".txt",
 					type: "get",
 					dataType: "text",
 					success: function (data) {
