--- a/up.html
+++ b/up.html
@@ -88,7 +88,7 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">另一个我！作为UP主的创作者</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">另一个我！作为UP主的创作者 As a video Blogger</h2>
 
 
 
