--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 										<div class="slider-text-inner">
-											<h1>理想，逆境，伙伴，猫 <strong></strong> 自我情绪的调节能力</h1>
+											<h1>理想，逆境，伙伴，猫， <strong></strong> 自我情绪的调节能力</h1>
 											<h2>驱动前行的力量，它们同等重要</h2>
 										</div>
 									</div>
