--- a/notes.html
+++ b/notes.html
@@ -89,7 +89,7 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">随笔</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">随笔 Notes</h2>
 				<div class="row row-bottom-padded-md">
 
 
