--- a/other.html
+++ b/other.html
@@ -86,7 +86,7 @@
 
 			<div id="fh5co-main">
 				<div class="fh5co-narrow-content">
-					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">其他，海报/小工具/胡乱手绘/游戏</h2>
+					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">海报/小工具/胡乱手绘/游戏 Posters / tools / hand drawn / games</h2>
 					<div class="row row-bottom-padded-md">
 
 						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
@@ -185,6 +185,48 @@
 								<a href="#" class="blog-img"><img src="images/sumiao1.jpg" class="img-responsive"></a>
 								<div class="desc">
 									<span><small>素描 </small> / <small> 公选课 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/youxi1.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>游戏里的家 </small> / <small> 明日之后 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/youxi2.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>游戏里的家 </small> / <small> FF14 </small> / <small> <i class="icon-comment"></i> 2022</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/youxi.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">近两年玩得比较多的游戏</a></h3>
+									<span><small>游戏 </small> / <small> 记录 </small> / <small> <i class="icon-comment"></i> 2022</small></span>
+									<p>端游：FF14，这是我的战争，模拟人生，双人成行，我的世界</p>
+									<p>手游：决战平安京，明日之后，闪耀暖暖，幻塔，英雄联盟手游，挨饿荒野，哈利波特魔法觉醒，第五人格，动物餐厅...</p>
+									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								</div>
+							</div>
+						</div>
+
+
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/zhuanji.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>专辑封面 </small> / <small> Cover </small> / <small> <i class="icon-comment"></i> 2018</small></span>
 								</div>
 							</div>
 						</div>
