--- a/photo.html
+++ b/photo.html
@@ -88,7 +88,7 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">摄影作品</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">摄影作品 Photographic works</h2>
 				
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
