--- a/photo.html
+++ b/photo.html
@@ -225,12 +225,13 @@
 			<div class="fh5co-narrow-content">
 				<div class="row">
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h1 class="fh5co-heading-colored">摄影曾是我生活中唯一的热爱</h1>
+						<h1 class="fh5co-heading-colored">摄影曾是我成长历程中唯一的热爱</h1>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-						<p class="fh5co-lead">但我也发现更多值得付诸精力的事物...</p>
+						<p class="fh5co-lead">我热爱记录风景人文，更热爱拍摄人像，尤其是那些富有活力的集体</p>
+						<p class="fh5co-lead">如果需要，我随时都会拾起心爱的相机</p>
 						<p><a href="#" class="btn btn-primary"> More Photo</a></p>
 					</div>
 					
