--- a/up.html
+++ b/up.html
@@ -61,60 +61,74 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+
+
+
+
+
 	</head>
 	<body>
-	<div id="fh5co-page">
-		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
+		<div id="fh5co-page">
+			<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+			<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
-			<h1 id="fh5co-logo"><a href="index.html">张月瑶</a></h1>
-			<nav id="fh5co-main-menu" role="navigation">
-				<ul>
-					<li><a href="index.html">我</a></li>
-					<li><a href="study.html">学术项目</a></li>
-					<li><a href="data.html">数据项目</a></li>
-					<li><a href="up.html">UP主</a></li>
-					<li><a href="photo.html">摄影</a></li>
-					<li><a href="other.html">其他</a></li>
-					<li><a href="notes.html">随笔</a></li>
-				</ul>
-			</nav>
+				<h1 id="fh5co-logo"><a href="index.html">张月瑶</a></h1>
+				<nav id="fh5co-main-menu" role="navigation">
+					<ul>
+						<li><a href="index.html">我</a></li>
+						<li><a href="study.html">学术项目</a></li>
+						<li><a href="data.html">数据项目</a></li>
+						<li><a href="up.html">UP主</a></li>
+						<li><a href="photo.html">摄影</a></li>
+						<li><a href="other.html">其他</a></li>
+						<li><a href="notes.html">随笔</a></li>
+					</ul>
+				</nav>
 
-			<div class="fh5co-footer">
-				<p><small>&copy; 2022年.个人网站尚在建设中. All Rights Reserved.</span> <span>Frame Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> </small></p>
-			</div>
-
-		</aside>
-
-		<div id="fh5co-main">
-			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">另一个我！作为UP主的创作者 As a video Blogger</h2>
-
-
-
-
-
-
-				<div class="col-md-8  col-md-offset-1  text-center  slider-text">
-					<video controls autoplay loop muted>
-						<source src="video/blankme.mp4" type="video/mp4">
-					</video>
+				<div class="fh5co-footer">
+					<p><small>&copy; 2022年.个人网站尚在建设中. All Rights Reserved.</span> <span>Frame Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> </small></p>
 				</div>
 
+			</aside>
+
+			<div id="fh5co-main">
+				<div class="fh5co-narrow-content">
+					<h2 class="fh5co-heading animate-box " data-animate-effect="fadeInLeft">另一个我！作为UP主的创作者 As a Vlogger</h2>
 
 
 
 
-				<div class="col-md-8 col-md-offset-2  text-center col-sm-offset-1 js-fullheight slider-text">
+
+
+
+
+
+					<div class="col-md-8 col-md-offset-2  text-center col-sm-offset-1  slider-text">
+
+						<div class="col-md-8 col-md-offset-2   text-center  slider-text">
+
+							<div class=" slider-text-inner">
+								<h2 class="fh5co-heading animate-box">作为UP主的我</h2>
+								<h2 class="fh5co-heading animate-box">将业余的爱好与创意付诸实践，独立创建并运营我的视频频道</h2>
+								<h2 class="fh5co-heading animate-box">全网粉丝量50W+，观看次数5000w+，数个爆款视频、热搜案例</h2>
+							</div>
+						</div>
+					</div>
+
+
+
+					<div class="col-md-8  col-md-offset-1  text-center  ">
+						<video controls autoplay loop muted id="videoWeight">
+							<source src="video/blankme.mp4" type="video/mp4">
+						</video>
+					</div>
+
+
 
 					<div class="col-md-8 col-md-offset-2   text-center  slider-text">
 
-
 						<div class=" slider-text-inner">
 							<h2 class="fh5co-heading animate-box"><br /></h2>
-							<h2 class="fh5co-heading animate-box">作为UP主的我</h2>
-							<h2 class="fh5co-heading animate-box">将业余的爱好与创意付诸实践，独立创建并运营我的视频频道</h2>
-							<h2 class="fh5co-heading animate-box">全网粉丝量50W+，观看次数破亿，数个爆款视频传播案例</h2>
 							<h5 class="fh5co-heading animate-box">在2年时间内，完成了92个视频的选题策划、内容创作、脚本、材料、手工实践、拍摄、后期剪辑与流量分析</h5>
 							<h5 class="fh5co-heading animate-box">超过300条的视频创意清单</h5>
 							<h5 class="fh5co-heading animate-box">拥有超过20项商业合作策划案例，包括乐事、索尼、美团、完美日记、德芙、招商银行、永璞咖啡等合作方</h5>
@@ -123,15 +137,17 @@
 								<a href="https://space.bilibili.com/421178217" target="_blank">Bilibili</a>
 								和
 								<a href="https://www.zhihu.com/org/loliba-suo" target="_blank">知乎</a>
-								，但你可以在以下所有平台找到我：
+								，但也可以在以下所有平台找到我：
 							</h2>
 						</div>
+
+
 					</div>
 
 
 
 
-					<div class="col-md-12 col-md-offset-2 text-center slider-text">
+					<div class="col-md-12 col-md-offset-2 text-center  js-fullheight slider-text">
 						<div class="col-md-1 col-padding">
 							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="fh5co-icon">
@@ -191,6 +207,14 @@
 						</div>
 
 
+						<div class=" col-md-8  text-center  slider-text">
+							<h2 class="fh5co-heading animate-box"><br /></h2>
+							<h5 class="fh5co-heading animate-box">在专注学业的近期，很抱歉没有内容更新。</h5>
+							<h5 class="fh5co-heading animate-box">在未来的稳定时间里，我将会思考是否继续坚持这项需要倾注巨量心血、但也带给我极大成就感的事业</h5>
+
+						</div>
+
+
 					</div>
 
 
@@ -216,21 +240,31 @@
 
 
 			</div>
-			</div>
+		</div>
 
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Flexslider -->
-	<script src="js/jquery.flexslider-min.js"></script>
-	
-	<!-- MAIN JS -->
-	<script src="js/main.js"></script>
+		<!-- jQuery -->
+		<script src="js/jquery.min.js"></script>
+		<!-- jQuery Easing -->
+		<script src="js/jquery.easing.1.3.js"></script>
+		<!-- Bootstrap -->
+		<script src="js/bootstrap.min.js"></script>
+		<!-- Waypoints -->
+		<script src="js/jquery.waypoints.min.js"></script>
+		<!-- Flexslider -->
+		<script src="js/jquery.flexslider-min.js"></script>
+
+		<!-- MAIN JS -->
+		<script src="js/main.js"></script>
+
+		<script>
+			videoWeight = window.innerWidth * 0.6
+			console.log(videoWeight)
+
+			var divVideo = document.getElementById("videoWeight");
+			divVideo.width = videoWeight;
+		</script>
+
+
 
 	</body>
 </html>
