--- a/data.html
+++ b/data.html
@@ -130,8 +130,9 @@
 								<h3><a href="#">情感可视化：Smile or Scowl? Looking at Infographic Design Through the Affective Lens</a></h3>
 								<span><small>Paper </small> / <small> 可视化 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>什么因素触发了信息图表中的情感反应？参与数据分析，负责网页前后端设计与开发，网页交互式呈现设计因素与设计案例，加入了图片瀑布流、主题色更换等功能。</p>
-								<a href="doc/smell.pdf" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="doc/smell.pdf" target="_blank">PDF</a>
+								<a href="https://ieeexplore.ieee.org/document/9409643/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://ieeexplore.ieee.org/document/9409643/" target="_blank">PDF</a>
+								<a href="https://affectiveinfographics.idvxlab.com/#" target="_blank">链接</a>
 							</div>
 						</div>
 					</div>
@@ -226,8 +227,8 @@
 								<h3><a href="#">小时候的梦想</a></h3>
 								<span><small>数据新闻 </small> / <small> 文本分析 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<p>提取微博近1.2万条有关梦想的关键词，整理出了一份“梦想职业”榜，这份榜单掀起了80后、90后的集体回忆杀。负责策划选题、数据爬取、文本分析、视觉、撰文，轻量取巧的选题取得了较高的讨论热度</p>
-								<a href="https://www.163.com/data/article/CUA789FT000181IU.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								<a href="https://www.163.com/data/article/CUA789FT000181IU.html" target="_blank">网易数读</a>
+								<a href="https://zhuanlan.zhihu.com/p/34176035" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://zhuanlan.zhihu.com/p/34176035" target="_blank">网易数读</a>
 							</div>
 						</div>
 					</div>
@@ -363,7 +364,7 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/jiaotong.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">交通大数据可视化</a></h3>
+								<h3><a href="#">出租车拥堵大数据可视化</a></h3>
 								<span><small>可视化 </small> / <small> Python </small> / <small> <i class="icon-comment"></i> 2017</small></span>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
@@ -520,7 +521,7 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/more2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">更多待书写...</a></h3>
 								<span><small>More</small> / <small> Data </small> / <small> <i class="icon-comment"></i> 202X</small></span>
