--- a/other.html
+++ b/other.html
@@ -102,7 +102,18 @@
 							</div>
 						</div>
 
-
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/zhuse.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">批量主色识别工具</a></h3>
+									<span><small>Matlab </small> / <small>  </small> / <small> <i class="icon-comment"></i> 2019</small></span>
+									<p>可以实现批量识别图片的n个主色调并且存储颜色信息</p>
+									<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+									<a href="￥" target="_blank">待上传</a>
+								</div>
+							</div>
+						</div>
 
 						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
@@ -286,6 +297,15 @@
 								<a href="#" class="blog-img"><img src="images/haibao7.jpg" class="img-responsive"></a>
 								<div class="desc">
 									<span><small>海报 </small> / <small> 樱之音 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/haibao8.jpg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small>邀请函/海报 </small> / <small> 学院/班级 </small> / <small> <i class="icon-comment"></i> 2015</small></span>
 								</div>
 							</div>
 						</div>
